--- a/app/src/main/res/values-ko-rKR/strings.xml
+++ b/app/src/main/res/values-ko-rKR/strings.xml
@@ -7,9 +7,6 @@
     <string name="weather_null">날씨 정보가 없습니다.</string>
     <string name="dustNull">미세먼지 정보가 없습니다.</string>
     <string name="lastUpdate">마지막 업데이트: 알 수 없음</string>
-    <string name="tabCount">1</string>
-    <string name="browserTitle">시나브로 브라우저</string>
-    <string name="browserHint">URL 혹은 검색어 입력</string>
     <string name="mainBookReader">뷰어</string>
     <string name="mainStore">서점</string>
     <string name="netIntro">브라우저</string>
@@ -18,6 +15,20 @@
     <string name="mainForwardPage">다음</string>
     <string name="mainRefreshEInk">잔상제거</string>
     <string name="mainNotiMenu">알림</string>
+    <string name="titleStoreList">서점 선택</string>
+    <string name="storeRidi">리디북스</string>
+    <string name="storeYes24">YES24</string>
+    <string name="storeAladin">알라딘</string>
+    <string name="storeKyobo">교보문고</string>
+    <string name="storeBc">북큐브</string>
+    <string name="storeInterpark">인터파크</string>
+    <string name="storeY2books">영풍문고</string>
+    <string name="storeAmazon">아마존 US</string>
+    <string name="storeDefault">이 서점을 기본으로 설정하고 다시 묻지 않기</string>
+    <string name="storeCustom">사용자 설정</string>
+    <string name="storeCName">서점명</string>
+    <string name="storeCAddress">서점 URL</string>
+    <string name="storeCustomDesc">이 서점은 기본으로 설정되며 앱 설정에서 값을 수정할 수 있습니다.</string>
 
     <!-- 설명문 -->
 
